--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GcmCallCSR1</string>
+    <string name="app_name">OmniSales</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -22,4 +22,5 @@
 
     <string name="device_description">android device</string>
     <string name="device_admin_label">Device Admin</string>
+
 </resources>
